# tts-joinery

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  tts_join.py
joinery/: cli.py  op.py
joinery/api/: __init__.py  base.py  openai.py
joinery/tests/: test_e2e.py
